# Bard

./: Cargo.toml  INSTALL.md  QUICKSTART.md  README.md  install.sh  style.css  ui.rs
assets/: bard.desktop
src/: cava.rs  color_extractor.rs  lyrics.rs  main.rs  mpd_client.rs  ui.rs  waveform.rs
